--- a/TheaterJSF/web/Template/TheaterTemplate.xhtml
+++ b/TheaterJSF/web/Template/TheaterTemplate.xhtml
@@ -6,11 +6,11 @@
       xmlns:h="http://java.sun.com/jsf/html">
     
     <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <title>Sunnymart Theaters</title>
     </h:head>
     
-    <h:body>
+    <h:body style="width: 100%; height: 100%; background-color: #404040;">
         <div id="top" class="top" >
             <ui:insert name="top"></ui:insert>
             
