--- a/TheaterJSF/web/Template/TheaterTemplate.xhtml
+++ b/TheaterJSF/web/Template/TheaterTemplate.xhtml
@@ -10,17 +10,21 @@
         <title>Sunnymart Theaters</title>
     </h:head>
     
-    <h:body style="width: 100%; height: 100%; background-color: #404040;">
-        <div id="top" class="top" >
+    <h:body style="width: 100%; height: 100%; background-color: #404040; color: #faf320;">
+        <div id="top" class="top">
             <ui:insert name="top"></ui:insert>
             
-            <h:graphicImage id="Logo" value="Resources/images/SunnymartLogo.PNG" alt="Have a sunny day!" />
+            <h:graphicImage id="Logo" value="Resources/images/SunnymartLogo.PNG" alt="Have a sunny day!"/>
         </div>
         <div id="left">
-             <ui:insert name="left"></ui:insert>
+            <ui:insert name="left">
+                
+            </ui:insert>
         </div>
         <div id="content" class="left_content">
-             <ui:insert name="content"></ui:insert>
+            <ui:insert name="content">
+                
+            </ui:insert>
         </div>
         <div id="bottom" class="bottom">
             <ui:insert name="bottom">
