--- a/TheaterJSF/web/Template/TheaterTemplate.xhtml
+++ b/TheaterJSF/web/Template/TheaterTemplate.xhtml
@@ -4,7 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html">
-    
+    <!-- 
+        This is the template file
+        each <ui:insert> and <div> sections divide the page into multiple sections
+        You can insert anything you want into these sections
+        Each webpage that utilizes this template will take all of the style choices made in each section
+    -->
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <title>Sunnymart Theaters</title>
